--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,9 @@
 .App {
   text-align: center;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .App-logo {
@@ -7,8 +11,8 @@
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-color: rgba(39, 43, 51, 0.6);
+  min-height: 15vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -17,6 +21,10 @@
   color: white;
 }
 
-.App-link {
-  color: #09d3ac;
+.App-main {
+}
+.App-footer {
+  background-color: rgba(39, 43, 51, 0.6);
+  min-height: 5vh;
+  color: #b7b7b7;
 }
